# Min-Messenger

./: .gitignore  CMakeLists.txt  Readme.md  a.out  client.cpp  main.cpp  run_tests.sh  secret.cpp  secret.h  server.cpp
tests/: ERRORS.md  README.md  integration_tests.py  run_tests.sh  secret_tests  secret_tests.cpp
